changed the way csv files are saved, now it saves every program feature in a tmp file and in the end it joins them all in a final csv
added more programs